Add initial configuration files and components for the agentic AI app

--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
-  "name": "innovation-inspiration-nextjs",
+  "name": "agentic-ai-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.1"
+    "@azure/identity": "^4.7.0",
+    "@azure/openai": "^2.0.0",
+    "@types/node": "20.5.6",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "graphviz-react": "^1.2.5",
+    "innovation-inspiration-nextjs": "file:",
+    "next": "13.4.19",
+    "openai": "^4.86.2",
+    "postcss": "8.4.28",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.0",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.1",
-    "@eslint/eslintrc": "^3"
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/react-syntax-highlighter": "^15.5.11",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19"
   }
 }
