--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@azure/identity": "^4.7.0",
     "@azure/openai": "^2.0.0",
-    "@types/node": "20.5.6",
+    "@llamaindex/workflow": "^0.0.15",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "graphviz-react": "^1.2.5",
     "innovation-inspiration-nextjs": "file:",
+    "llamaindex": "^0.9.9",
     "next": "13.4.19",
     "openai": "^4.86.2",
     "postcss": "8.4.28",
@@ -25,13 +26,14 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^22.13.10",
     "@types/react-syntax-highlighter": "^15.5.11",
     "eslint": "8.48.0",
-    "eslint-config-next": "13.4.19"
+    "eslint-config-next": "13.4.19",
+    "typescript": "^5.8.2"
   }
 }
