Update configuration and remove deprecated workflow agent
- Disable poweredByHeader and enable compression in next.config.js
- Add production build and postbuild scripts in package.json
- Remove workflow-agent.py as it is no longer needed
- Add deployment configuration file

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:production": "next build",
+    "postbuild": "next-on-netlify"
   },
   "dependencies": {
     "@azure/identity": "^4.7.0",
