--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@azure/identity": "^4.7.0",
     "@azure/openai": "^2.0.0",
     "@llamaindex/workflow": "^0.0.15",
+    "@tavily/core": "^0.3.1",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
