--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,20 @@
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
     "docker-in-docker": "latest"
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-vscode.vscode-node-azure-pack",
+        "github.vscode-github-actions",
+        "yzhang.markdown-all-in-one",
+        "ms-azuretools.vscode-docker",
+        "rangav.vscode-thunder-client",
+        "ms-windows-ai-studio.windows-ai-studio",
+        "ms-vscode.vscode-typescript-next",
+        "ms-python.python",
+        "ms-vscode.simple-browser" // 添加 Simple Browser 扩展
+      ]
+    }
   }
 }
