--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "build:production": "next build"
+    "lint": "next lint"
   },
   "dependencies": {
     "@azure/identity": "^4.7.0",
     "@azure/openai": "^2.0.0",
+    "@copilotkit/react-core": "^1.7.1",
+    "@copilotkit/react-ui": "^1.7.1",
+    "@copilotkit/runtime": "^1.7.1",
+    "@copilotkit/react-textarea": "^1.7.1",
     "@llamaindex/workflow": "^0.0.15",
     "@tavily/core": "^0.3.1",
     "@types/react": "18.2.21",
@@ -19,29 +22,34 @@
     "autoprefixer": "10.4.15",
     "graphviz-react": "^1.2.5",
     "llamaindex": "^0.9.9",
-    "next": "13.4.19",
+    "next": "^15.2.0-canary.73",
     "openai": "^4.86.2",
     "postcss": "8.4.28",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "lucide-react": "^0.475.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
-    "@types/node": "^22.13.10",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "13.4.19",
+    "@types/node": "^20.17.19",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.2.0-canary.73",
     "glob": "^10.3.10",
     "rimraf": "^5.0.5",
-    "typescript": "^5.8.2"
+    "typescript": "^5.7.3",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8.0.0",
+    "tailwindcss": "^4.0.8"
   },
-  "overrides": {
-    "eslint": "^8.56.0",
-    "glob": "^10.3.10",
-    "rimraf": "^5.0.5"
+  "resolutions": {
+    "eslint": "^8.57.0"
   }
 }
