--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "agentic-ai-app",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=22",
+    "npm": ">=10.5.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -15,44 +19,42 @@
     "@copilotkit/react-textarea": "^1.7.1",
     "@copilotkit/react-ui": "^1.7.1",
     "@copilotkit/runtime": "^1.7.1",
-    "@llamaindex/workflow": "^0.0.15",
+    "@llamaindex/workflow": "^0.0.16",
+    "@llamaindex/core": "^0.5.8",
     "@tavily/core": "^0.3.1",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
+    "check-deps": "^1.4.1",
     "clsx": "^2.1.1",
     "graphviz-react": "^1.2.5",
-    "llamaindex": "^0.9.9",
-    "lucide-react": "^0.475.0",
-    "next": "^15.2.0-canary.73",
-    "openai": "^4.86.2",
+    "llamaindex": "^0.9.11",
+    "lucide-react": "^0.482.0",
+    "next": "^15.2.2",
+    "openai": "^4.87.3",
     "postcss": "8.4.28",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.1",
-    "react-syntax-highlighter": "^15.5.0",
-    "remark-gfm": "^4.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "autoprefixer": "10.4.15"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20.17.19",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/node": "22.13.10",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.2.0-canary.73",
-    "glob": "^10.3.10",
-    "postcss": "^8.0.0",
-    "rimraf": "^5.0.5",
-    "tailwindcss": "^4.0.8",
-    "typescript": "^5.7.3"
+    "eslint": "9.22.0",
+    "eslint-config-next": "15.2.2",
+    "glob": "11.0.1",
+    "rimraf": "6.0.1",
+    "typescript": "^5.8.2"
   },
   "resolutions": {
-    "eslint": "^8.57.0"
+    "eslint": "9.22.0",
+    "@llamaindex/core": "0.5.8"
   }
 }
