refactor: update ESLint rules and improve variable naming conventions for clarity

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "agentic-ai-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "engines": {
     "node": ">=22",
     "npm": ">=10.5.0"
