--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@copilotkit/react-textarea": "^1.7.1",
     "@copilotkit/react-ui": "^1.7.1",
     "@copilotkit/runtime": "^1.7.1",
-    "@llamaindex/workflow": "^0.0.16",
     "@llamaindex/core": "^0.5.8",
+    "@llamaindex/workflow": "^0.0.16",
     "@tavily/core": "^0.3.1",
+    "autoprefixer": "10.4.15",
     "check-deps": "^1.4.1",
     "clsx": "^2.1.1",
     "graphviz-react": "^1.2.5",
@@ -26,6 +27,7 @@
     "lucide-react": "^0.482.0",
     "next": "^15.2.2",
     "openai": "^4.87.3",
+    "pnpm": "^10.6.3",
     "postcss": "8.4.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -34,8 +36,7 @@
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "^1.0.7",
-    "autoprefixer": "10.4.15"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
