--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.482.0",
     "next": "^15.2.2",
     "openai": "^4.87.3",
+    "pdfjs-dist": "^3.11.174",
     "pnpm": "^10.6.3",
     "postcss": "8.4.28",
     "react": "^18.2.0",
