--- a/.github/workflows/action-to-acr.yml
+++ b/.github/workflows/action-to-acr.yml
@@ -1,63 +1,37 @@
-name: Build and Push to Azure Container Registry
+name: Build and Push to ACR
 
 on:
   push:
-    branches:
-      - dev
+    branches: [dev]
   pull_request:
-    types: [opened, synchronize, reopened, closed]
-    branches:
-      - dev
+    branches: [dev]
+    types: [opened, synchronize, reopened]
 
 jobs:
-  build_and_push_job:
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+  build_and_deploy:
     runs-on: ubuntu-latest
-    name: Build and Push to ACR
+    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
+    
     steps:
-      - uses: actions/checkout@v3
-        with:
-          submodules: true
-          lfs: false
+      - uses: actions/checkout@v2
       
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v1
       
       - name: Generate timestamp
         id: timestamp
         run: echo "timestamp=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_OUTPUT
       
       - name: Login to Azure Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
           registry: haxureg.azurecr.io
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
       
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v2
         with:
           context: .
           push: true
           tags: haxureg.azurecr.io/agentic-ai-app:${{ steps.timestamp.outputs.timestamp }}
-          # Add build options for more verbose output
-          build-args: |
-            BUILDKIT_INLINE_CACHE=1
-          # Output build logs even on failure
-          outputs: type=docker,dest=/tmp/image.tar
-
-      - name: Upload build logs if failed
-        if: failure()
-        uses: actions/upload-artifact@v3
-        with:
-          name: build-logs
-          path: /tmp/image.tar
-          retention-days: 5
-
-  close_pull_request_job:
-    if: github.event_name == 'pull_request' && github.event.action == 'closed'
-    runs-on: ubuntu-latest
-    name: Close Pull Request Job
-    steps:
-      - name: No action needed for PR close
-        run: echo "Pull request was closed, no container push needed."
